# Audio-and-video

./: README.md
Android/androidplayer/: gradle.properties
Android/androidplayer/app/: build.gradle.kts
Android/androidplayer/app/src/main/cpp/: CMakeLists.txt  decoder.cpp  demuxer.cpp  fqueue.cpp  main_controller.cpp  queue.cpp  render.cpp
Android/androidplayer/app/src/main/cpp/include/: decoder.h  demuxer.h  fqueue.h  main_controller.h  queue.h  render.h
Android/androidplayer/app/src/main/java/com/example/androidplayer/: MainActivity.java  Player.java
Android/androidplayer/app/src/main/res/layout/: activity_main.xml
Android/androidplayer/gradle/wrapper/: gradle-wrapper.properties
Windows/code/: audiooutput.cpp  audiooutput.h  avframequeue.cpp  avframequeue.h  avpacketqueue.cpp  avpacketqueue.h  avsync.h  decodethread.cpp  decodethread.h  demuxthread.cpp  demuxthread.h  main.cpp  maincontroller.cpp  maincontroller.h  queue.h  thread.cpp  thread.h  videooutput.cpp  videooutput.h
